# tracktion

./: .gitignore  Makefile  README.md
backend/: alembic.ini  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: analytics.py  applications.py  companies.py  imports.py  jobs.py  status_events.py  statuses.py
backend/app/core/: csv_parser.py  exceptions.py  status_log_parser.py  validators.py
backend/app/jobs/: dead_link_job.py
backend/app/models/: __init__.py  application.py  company.py  job_run.py  status.py  status_event.py
backend/app/repositories/: application_repo.py  company_repo.py  status_event_repo.py
backend/app/schemas/: analytics.py  application.py  company.py  imports.py  status_event.py
backend/app/services/: analytics_service.py  application_service.py  company_service.py  import_service.py  link_checker.py  status_event_service.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial_schema.py  002_cascade_delete_status_event.py  003_add_role_closed_status.py  004_add_last_status_change_at.py
backend/scripts/: check_link.py  seed_db.py
backend/tests/: conftest.py  test_analytics.py  test_applications.py  test_dead_link_job.py  test_import.py  test_link_checker.py  test_status_events.py  test_status_log_parser.py  test_validators.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/api/: analytics.ts  applications.ts  client.ts  companies.ts  imports.ts  statusEvents.ts  statuses.ts
(+32 files in other folders)
