[project]
name = "tracktion-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "sqlmodel>=0.0.19",
    "alembic>=1.13",
    "uvicorn[standard]>=0.29",
    "pandas>=2.2",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0",
    "ruff>=0.15.16",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "ruff>=0.15.16",
]
